# vibex

./: .crush.json  .gitignore  AGENTS.md  LICENSE  PULL_REQUEST_LLM_AUTHENTICATION_PERSISTENCE.md  README.md  setup.bash
backend/: .env.example  .gitignore  CANDLE_SCHEDULER.md  Dockerfile  MIGRATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  alembic.ini  check_columns.py  check_db_url.py  compose.override.yml  compose.yml  e2e_test_output.txt  init-db.sql  podman-compose.override.yml.example  podman-compose.yml  pyproject.toml  sync_data.py  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  test_output_all.txt  test_scheduler.py  verify_live_execution.py  verify_paper_trading.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_state.py  002_add_user_and_challenge_tables.py  1a7275c79921_add_funding_rate_to_market_data.py  2779b8a86eec_add_missing_performance_metrics_columns.py  4add75c79922_add_missing_strategy_columns.py  8228259bbdbf_add_balance_usd_to_account.py  a0d2fb5d8394_create_tables_with_correct_foreign_keys.py  bd90195a9f69_add_fee_and_funding_fields.py  bfb15195438f_initial_baseline.py  c38b24f60f6d_add_multi_asset_decision_support.py  e44e20d265c6_initial_database_schema.py
backend/docs/: schema-constraint-validation-report.md
backend/monitoring/: alert_rules.yml  prometheus.yml
backend/scripts/: README.md  demo_login.ps1  demo_login.sh  generate_test_wallet.py  run-tests.sh  setup-monitoring.sh  sign.py  start-test-db.sh
backend/src/app/: __init__.py  main.py  middleware.py
backend/src/tests/: test_candle_scheduler.py
backend/tests/: ORGANIZATION_SUMMARY.md  README.md  STRUCTURE.txt  conftest.py
backend/tests/docs/: E2E_TEST_REAL_DATA_REPORT.md  INDEX.md  QUICK_REFERENCE.md  REAL_DATA_E2E_ACTION_PLAN.md  WHAT_NEEDS_TO_BE_DONE.md
backend/tests/e2e/: README.md  test_accounts_api_e2e.py  test_context_builder_e2e.py  test_db_market_data_e2e.py  test_decision_accuracy_regression.py  test_decision_api_e2e.py  test_decision_generate_api_e2e.py  test_decision_generate_api_e2e_http.py  test_full_pipeline_e2e.py  test_generate_api_e2e.py  test_llm_decision_engine_e2e.py  test_strategies_api_e2e.py  test_strategy_persistence_e2e.py  test_technical_analysis_e2e.py  test_users_api_e2e.py
backend/tests/integration/: test_account_relationships.py  test_admin_authorization.py  test_candle_scheduler_integration.py  test_config_integration.py  test_llm_decision_engine_integration.py  test_new_decision_engine.py  test_strategy_persistence_integration.py  test_technical_analysis_integration.py
backend/tests/performance/: test_llm_decision_performance.py
backend/tests/scripts/: README.md  add_funding_rate.py  check_db.py  check_users.py  create_test_data.py  delete_test_data.py  test_scheduler.py
backend/tests/unit/: test_account_service.py  test_account_service_properties.py  test_config_cache.py  test_config_manager.py  test_config_reloader.py  test_config_validator.py  test_context_builder.py  test_context_builder_strategy.py  test_decision_api_with_real_data.py  test_decision_validator.py  test_execution_factory.py  test_execution_integration.py  test_execution_service_risk.py  test_live_adapter.py  test_llm_authentication.py  test_llm_service.py  test_market_data_funding_rate.py  test_market_data_list_api.py  test_minimal_context_creation.py  test_paper_adapter.py  test_paper_position_tracking.py  test_reconciliation.py  test_security_middleware.py  test_status_management.py  test_strategy_manager.py  test_technical_analysis.py  test_tpsl_orchestration.py  test_trading_decision_schemas.py  test_user_management_service.py
(+194 files in other folders)
